src/styles/_news.scss
.new-cards {
  margin-top: 1.8rem;
  display: grid;
  width: 100%;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  grid-gap: 2rem;
}

.news-card {
  overflow-x: hidden;
  z-index: 20;
  width: 100%;
  text-decoration: none;
  background-color: #f1f1f1;
  img {
    width: 100%;
    height: 200px;
    object-fit: cover;
  }
  h2 {
    padding: 1rem;
  }
  .title {
    font-size: 1.35rem;
  }
  .news-buttons-box {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    h3 {
      font-size: 1.1rem;
      color: rgb(83, 83, 83);
    }
    p,
    .news-link {
      background-color: rgb(2, 117, 2);
      color: white;
      padding: 0.75rem 2rem;
      font-weight: bold;
      font-size: 0.85rem;
      border-radius: 100px;
      letter-spacing: 1.5px;
    }
  }
}
.align-center {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  background-color: rgba(0, 0, 0, 0.377);
}
.news-card-zoom {
  width: 80%;
  height: fit-content;
  background-color: white;
  img {
    width: 100%;
    height: 450px;
    object-fit: cover;
  }
  .details-title,
  .desc {
    padding: 0.8rem;
  }
  .desc {
    font-size: 1rem;
  }
}
.details-news-buttons-box {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 0.8rem;
  a {
    background-color: rgb(2, 117, 2);
    color: white;
    padding: 0.75rem 2rem;
    font-weight: bold;
    font-size: 0.85rem;
    border-radius: 100px;
    letter-spacing: 1.5px;
    text-decoration: none;
  }
}
.hyper-text {
  text-decoration: none;
}
@media screen and (max-width: 455px) {
  .new-cards {
    margin-top: 1.8rem;
    display: grid;
    width: 100%;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-gap: 2rem;
  }
}

